--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
     
 </section>
 
-
+  $(document).ready($.getJSON('zebapi.com/api/v1/market/ticker/btc/inr', function(data) {
+    $('#buyId').text("Buy : " +data.buy);
+    $('#buyId').text("Sell : "+data.sell);
+}););
+  
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
