--- a/index.html
+++ b/index.html
@@ -71,9 +71,13 @@
     
 </section>
 
-  $(document).ready(  
-  console.log( "ready!" );
- );
+  $(document).ready(function() {
+  $.getJSON('zebapi.com/api/v1/market/ticker/btc/inr', function(data) {
+    $('#buyId').text("Buy : " +data.buy);
+    $('#buyId').text("Sell : "+data.sell);
+}
+}
+  );
   
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
