--- a/index.html
+++ b/index.html
@@ -72,10 +72,7 @@
 </section>
 
   $(document).ready(function() {
-  $.getJSON('zebapi.com/api/v1/market/ticker/btc/inr', function(data) {
-    $('#buyId').text("Buy : " +data.buy);
-    $('#buyId').text("Sell : "+data.sell);
-}
+  console.log("yo");
 }
   );
   
