--- a/index.html
+++ b/index.html
@@ -71,10 +71,13 @@
     
 </section>
 
-  $(document).ready(function() {
+  <script language="javascript" type="text/javascript">
+      $(document).ready(function() {
   console.log("yo");
 }
   );
+    </script>
+  
   
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
