--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   
   <script language="javascript" type="text/javascript">
     $(document).ready(function() {
-      $.getJSON('http://zebapi.com/api/v1/market/ticker/btc/inr', function(data) {
+      $.getJSON('https://www.zebapi.com/api/v1/market/ticker/btc/inr', function(data) {
         $('#buyId').text("Buy : " +data.buy);
         $('#buyId').text("Sell : "+data.sell);
       });
