--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
       $.getJSON('https://www.zebapi.com/api/v1/market/ticker/btc/inr', function(data) {
         $('#buyId').text("Buy : " +data.buy);
         $('#buyId').text("Sell : "+data.sell);
+        console.log(data.buy);
       });
+      console.log(data.buy);
     });
   </script>
   
