--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1"><br><br>Buy Bitcoin in Cash<br></h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">dfasdfds</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://chat.whatsapp.com/6GZBZajbQbz7ccaK659lct" target="_blank">Buy : 40</a> <a class="btn btn-md btn-primary display-4" href="https://t.me/joinchat/AAAAAEOn-wAObILweR5XJA" target="_blank">Sell : 50</a></div>
+                <div class="mbr-section-btn"><a id="buyId" class="btn btn-md btn-secondary display-4" href="https://chat.whatsapp.com/6GZBZajbQbz7ccaK659lct" target="_blank">Buy : 40</a> <a id="sellId" class="btn btn-md btn-primary display-4" href="https://t.me/joinchat/AAAAAEOn-wAObILweR5XJA" target="_blank">Sell : 50</a></div>
             </div>
         </div>
     </div>
@@ -88,7 +88,7 @@
         $('#buyId').text("Sell : "+data.sell);
         console.log(data.buy);
       });
-      console.log(data.buy);
+      console.log("successful");
     });
   </script>
   
