changed personal whatsapp to group whatsapp

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1"><br><br>Buy Bitcoin in Cash<br></h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">India's first Bitcoin cash ATM<br>13,656 users interacting everyday<br>India's largest chat based buy-sell crypto community</p>
-                <div class="mbr-section-btn"><a id="buyId" class="btn btn-md btn-secondary display-4" href="https://api.whatsapp.com/send?phone=919027454416" target="_blank">Buy</a>  <a id="sellId" class="btn btn-md btn-primary display-4" href="https://api.whatsapp.com/send?phone=919027454416" target="_blank">Sell</a></div>
+                <div class="mbr-section-btn"><a id="buyId" class="btn btn-md btn-secondary display-4" href="https://chat.whatsapp.com/6GZBZajbQbz7ccaK659lct" target="_blank">Buy</a>  <a id="sellId" class="btn btn-md btn-primary display-4" href="https://chat.whatsapp.com/6GZBZajbQbz7ccaK659lct" target="_blank">Sell</a></div>
             </div>
         </div>
     </div>
