--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="navbar-brand">
                 
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-2" href="https://api.whatsapp.com/send?phone=919027454416" target="_blank">
-                        BUYCOIN</a></span>
+                        Buy bitcoin with cash in India</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://buycoin.co.in">free web software</a></section><section class="cid-qvWEGIV6DT mbr-fullscreen mbr-parallax-background" id="header2-4" data-rv-view="142">
+<section class="engine"><a href="https://buycoin.co.in">Buy bitcoin with cash in India</a></section><section class="cid-qvWEGIV6DT mbr-fullscreen mbr-parallax-background" id="header2-4" data-rv-view="142">
 
     
 
