--- a/index.html
+++ b/index.html
@@ -48,12 +48,14 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-2" href="https://api.whatsapp.com/send?phone=919027454416" target="_blank">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-2" href="http://buycoin.co.in" target="_blank">
                         Buy bitcoin with cash in India</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
+                    <a class="nav-link link text-black display-4" href="https://medium.com/buycoin-co-in-buy-bitcoin-with-cash-in-india" target="_blank">Read our BLOG</a>
+                </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white display-4" href="https://api.whatsapp.com/send?phone=919027454416" target="_blank">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>
