--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="navbar-brand">
                 
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-2" href="http://buycoin.co.in" target="_blank">
-                        Buy bitcoin with cash in India</a></span>
+                        BUYCOIN</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
