--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://buycoin.co.in">Buy and Sell Bitcoin with cash in India</a></section><section class="cid-qvWEGIV6DT mbr-fullscreen mbr-parallax-background" id="header2-4" data-rv-view="142">
+<section class="engine"><a href="https://buycoin.co.in">Buy & Sell Bitcoin with cash in India</a></section><section class="cid-qvWEGIV6DT mbr-fullscreen mbr-parallax-background" id="header2-4" data-rv-view="140">
 
     
 
