--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title  pb-3 mbr-fonts-style display-1"><br><br>Buy & Sell Bitcoin in Cash<br></h1>
+                <h1 class="mbr-section-title mbr-bold pb-2 mbr-fonts-style display-1"><br><br>Buy & Sell Bitcoin in Cash<br></h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">India's first Bitcoin cash ATM<br>13,656 users interacting everyday<br>India's largest chat based buy-sell crypto community</p>
                 <div class="mbr-section-btn"><a id="buyId" class="btn btn-md btn-secondary display-4" href="https://chat.whatsapp.com/GNPo3DibaSrCiCtCs09lLQ" target="_blank">Buy</a>  <a id="sellId" class="btn btn-md btn-primary display-4" href="https://chat.whatsapp.com/GNPo3DibaSrCiCtCs09lLQ" target="_blank">Sell</a></div>
