--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">India's first Bitcoin cash ATM<br>13,656 users interacting everyday<br>India's largest chat based buy-sell crypto community</p>
                 <div class="mbr-section-btn"><a id="buyId" class="btn btn-md btn-secondary display-4" href="https://chat.whatsapp.com/GNPo3DibaSrCiCtCs09lLQ" target="_blank">Buy</a>  <a id="sellId" class="btn btn-md btn-primary display-4" href="https://chat.whatsapp.com/GNPo3DibaSrCiCtCs09lLQ" target="_blank">Sell</a></div>
-                <div class="mbr-section-btn"><a id="telegramId" class="btn btn-md btn-primary display-4" href="https://chat.whatsapp.com/GNPo3DibaSrCiCtCs09lLQ" target="_blank">Telegram</a></div>  
+                <div class="mbr-section-btn"><a id="telegramId" class="btn btn-md btn-info display-4" href="https://chat.whatsapp.com/GNPo3DibaSrCiCtCs09lLQ" target="_blank">Telegram</a></div>  
           </div>
         </div>
     </div>
